Updated composer dependencies

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
   "require": {
     "php": ">=5.4.0",
     "pavlista/palette": "~1.0",
-    "nette/nette": "~2.3"
+    "nette/di": "~2.3",
+    "nette/application": "~2.3",
+    "latte/latte": "~2.3"
   },
   "autoload": {
     "classmap": ["src/"]
