--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "pavlista/palette": "~2.3",
     "nette/di": "~2.3",
     "nette/application": "~2.3",
-    "latte/latte": "~2.3"
+    "latte/latte": "~2.3",
+    "nette/utils": "~2.3"
   },
   "autoload": {
     "classmap": ["src/"]
