Now requires Tracy for log exceptions.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "nette/di": "~2.3",
     "nette/application": "~2.3",
     "latte/latte": "~2.3",
-    "nette/utils": "~2.3"
+    "nette/utils": "~2.3",
+    "tracy/tracy": "~2.3"
   },
   "autoload": {
     "classmap": ["src/"]
