--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "pavlista/palette": "~2.7",
+    "pavlista/palette": ">=2.7.2 <3.0",
 
     "nette/di": "^3.0",
     "nette/application": "^3.0",
