--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "pavlista/palette": ">=2.7.2 <3.0",
+    "pavlista/palette": ">=2.7.7 <3.0",
 
     "nette/di": "^3.0",
     "nette/application": "^3.0",
@@ -22,7 +22,7 @@
   }
   ,
   "require-dev": {
-    "roave/security-advisories": "dev-master"
+    "roave/security-advisories": "dev-latest"
   },
   "autoload": {
     "classmap": ["src/"]
