--- a/demo/www/nette3.0/composer.json
+++ b/demo/www/nette3.0/composer.json
@@ -8,7 +8,7 @@
         "pavlista/palette": "*"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-latest"
     },
     "minimum-stability": "stable"
 }
