--- a/demo/app/config/config.neon
+++ b/demo/app/config/config.neon
@@ -18,6 +18,11 @@ palette:
 	basepath: '/var/www/html/demo/www/'
 	signingKey: 'HOfU2RTxbimmaYmAnrQ1'
 	webpMacroDefaultQuality: 80
+	fallbackImage: '/var/www/html/demo/www/images/default/default.jpg'
+	fallbackImages:
+		default1: '/var/www/html/demo/www/images/default/default-1.jpg'
+		default2: '/var/www/html/demo/www/images/default/default-2.jpg'
+		default3: '/var/www/html/demo/www/images/default/default-3.jpg'
 
 session:
 	expiration: 14 days
