--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -3,7 +3,8 @@ version: '2.1'
 services:
   nette-palette:
     container_name: nette-palette
-    image: sidewave/php:7.1-apache
+    image: sidewave/php:8.2-apache
+    command: bash -c 'apache2ctl -D FOREGROUND'
     environment:
       - APACHE_DOCUMENT_ROOT=/var/www/html/demo/www
     ports:
