Povolení instalace nette/utils@4.

--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     }
   ],
   "require": {
-    "php": ">=7.1.0",
+    "php": ">=7.1.0 <8.3",
     "pavlista/palette": ">=v2.9.0 <3.0",
 
     "nette/di": "^3.0",
     "nette/application": "^3.0",
-    "nette/utils": "^3.0",
+    "nette/utils": "^3.0 || ^4",
     "latte/latte": "~2.3",
     "tracy/tracy": "~2.3"
   },
