aktualizace zavislosti pro latte 3 a php 8.2

--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     }
   ],
   "require": {
-    "php": ">=7.1.0 <8.4",
+    "php": ">=8.2",
     "pavlista/palette": ">=v2.9.0 <3.0",
 
     "nette/di": "^3.0",
     "nette/application": "^3.0",
     "nette/utils": "^3.0 || ^4",
-    "latte/latte": "~2.3",
-    "tracy/tracy": "~2.3"
+    "latte/latte": "^3.0",
+    "tracy/tracy": "^2.10"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
